name:           GeocoderOpenCage
version:        0.1.0.1
cabal-version:  >= 1.4
build-type:     Simple
author:         Juergen Hahn
maintainer:     hahn@geoinfo.tuwien.ac.at
category:       Web
license:        GPL
license-file:   LICENSE
stability:      experimental
homepage:       https://github.com/juergenhah/Haskell-Geocoder-OpenCage.git
description:    uses the OpenCage REST API to geocode and reverse geocode
synopsis:       Geocoder and Reverse Geocoding Service Wrapper

library 
  build-depends:    
                    base >= 4 && <5,
                    text >= 1.2.3.1 && <2,
                    HTTP >=4000.3.12 && <4000.4,
                    bytestring >=0.10.8.2 && <0.11,
                    aeson >=1.4.2.0
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  
                   Geocoder,
                   RevGeocoder,
                   Main
  other-modules:    
                    HTTPWrapper
                    
  extensions:                            
                    OverloadedStrings

