name:           GeocoderOpenCage
version:        0.2.0.0
cabal-version:  >= 1.12
build-type:     Simple
author:         Juergen Hahn
maintainer:     hahn@geoinfo.tuwien.ac.at
category:       Web
license:        GPL
license-file:   LICENSE
stability:      experimental
homepage:       https://github.com/juergenhah/Haskell-Geocoder-OpenCage.git
description:    uses the OpenCage REST API to geocode and reverse geocode
synopsis:       Geocoder and Reverse Geocoding Service Wrapper

library 
  build-depends:    
                    base >= 4 && <5,
                    text >= 1.2.3.1 && <2,
                    HTTP >=4000.3.12 && <4000.4,
                    bytestring >=0.10.8.2 && <0.11,
                    aeson >=1.4.2.0
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  
                   Geocoder,
                   RevGeocoder,
                   Main
  other-modules:    
                    HTTPWrapper
                    
  default-language: Haskell2010


test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , bytestring
    , raw-strings-qq
    , aeson >=1.4.2.0
    , HUnit
    , GeocoderOpenCage
    , text
  other-modules:
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*

